# Automatisation-reseau-avec-Python

./: README.md  docker-compose.yml  nre_platform.db  pyproject.toml
api/: main.py
api/routes/: devices.py  jobs.py
automation_project/: install.ps1  install.sh  requirements.txt
cli/: main.py
core/: config.py
core/automation_engine/: engine.py
core/inventory/: config.yaml  defaults.yaml  groups.yaml  hosts.yaml
core/tasks/: backup.py
db/: models.py
exo1_SSH/: devices.yaml  ssh_backup.py
exo2_napalm/: collect.py  devices.yaml  monitor.py
exo3_projet_final/: .gitignore  config.py  config_example.txt  config_example.yaml  devices_simulation.yaml  install.py  main.py  readme  requirements.txt  structure_du_projet  utilisation
exo3_projet_final/dashboards/: __init__.py  plotly_dash_app.py
exo3_projet_final/docs/: installation.md
exo3_projet_final/modules/: __init__.py  discovery.py  monitoring.py  napalm_utils.py  reports.py  utils.py
exo3_projet_final/tests/: __init__.py  config_test.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  Devices.jsx  Jobs.jsx
workers/: celery_app.py  tasks.py
